# mini-gpt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  Makefile  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  ruff.toml  train.ipynb
.github/workflows/: enforce-branch-name.yml  ruff-lint.yml
src/mini_gpt/: cli.py
